# chesag

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: style-check.yml
chesag/: chess.py  data_structures.py  evaluation.py  logging.py  move_priority.py  parallel.py  replay.py  viewer.py
chesag/agents/: __init__.py  base.py  minimax.py  random.py  stockfish.py
chesag/agents/mcts/: agent.py  algorithm.py  move_selection.py  node.py
chesag/game/: game.py  results.py  statistics.py
plans/: 01-minimax-negamax-and-tt.md  02-evaluation-tiers.md  03-cheap-move-ordering.md  04-ordering-state-reuse.md  05-mcts-tree-policy.md  06-mcts-config-honesty.md  07-mcts-position-keying.md  08-review-and-refactor.md  master-plan.md
src/chesag/: __init__.py  benchmarks.py  cli.py  data_structures.py  evaluation.py  logging.py  move_priority.py  parallel.py  position_key.py  replay.py  viewer.py
src/chesag/agents/: __init__.py  base.py  minimax.py  random.py  stockfish.py
src/chesag/agents/mcts/: agent.py  algorithm.py  node.py
src/chesag/game/: __init__.py  game.py  results.py  statistics.py
tests/: __init__.py  conftest.py  hypothesis_strategies.py  test_benchmarks.py  test_cli_surface.py  test_evaluation.py  test_game_loop.py  test_move_priority.py  test_position_key.py  test_replay.py  test_results_and_statistics.py  test_results_and_statistics_hypothesis.py
tests/agents/: test_mcts_agent.py  test_minimax_agent.py  test_random_agent.py
