[project]
name = "chesag"
version = "0.1.0"
description = "Chess-playing agents written in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cachetools>=6.1.0",
  "chess>=1.11.2",
  "numpy>=2.3.2",
  "pyqt6==6.10.1",
  "tqdm>=4.67.1",
]

[project.scripts]
chesag = "chesag.cli:main"
chesag-bench = "chesag.benchmarks:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "hypothesis>=6",
  "mutmut>=3.5",
  "pre-commit>=4.5.0",
  "pylint>=4",
  "pytest>=8.4.0",
  "ruff>=0.15.0",
  "ty>=0.0.1a13",
]

[tool.ruff]
line-length = 120
indent-width = 2
preview = true
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "I",
  "N",
  "D",
  "UP",
  "ANN",
  "B",
  "A",
  "BLE",
  "C4",
  "C90",
  "EM",
  "EXE",
  "G",
  "PIE",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "TCH",
  "ARG",
  "PTH",
  "PLE",
  "PLW",
  "PLC",
  "PLR01",
  "PLR02",
  "PLR04",
  "PLR1",
  "PLR2",
  "PLR5",
  "PLR6",
  "FLY",
  "NPY",
  "PERF",
  "FURB",
  "S",
  "RUF",
]
ignore = [
  "ANN401",
  "E111",
  "E114",
  "B027",
  "N802",
  "RUF067",
  "S101",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "ANN",
  "ARG005",
  "D",
  "PLC2701",
  "PLR2004",
  "PLR6301",
  "RUF069",
  "S",
  "SLF001",
  "TC001",
  "TC003",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.rules]
division-by-zero = "error"
possibly-missing-import = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# mutmut
# ---------------------------------------------------------------------------
[tool.mutmut]
paths_to_mutate = [
  "src/chesag/agents/minimax.py",
  "src/chesag/evaluation.py",
  "src/chesag/move_priority.py",
]
also_copy = ["src/chesag"]
do_not_mutate = [
  "*/__init__.py",
  "src/chesag/cli.py",
  "src/chesag/viewer.py",
  "src/chesag/replay.py",
  "src/chesag/benchmarks.py",
]
max_stack_depth = 8

# ---------------------------------------------------------------------------
# Pylint
# ---------------------------------------------------------------------------
[tool.pylint.messages-control]
enable = [
  "duplicate-code",
  "too-many-ancestors",
  "too-many-instance-attributes",
  "arguments-differ",
  "signature-differs",
  "arguments-renamed",
  "invalid-overridden-method",
  "overridden-final-method",
  "subclassed-final-class",
  "attribute-defined-outside-init",
  "super-init-not-called",
  "non-parent-init-called",
  "useless-parent-delegation",
  "unused-private-member",
  "redefined-slots-in-subclass",
  "bad-classmethod-argument",
  "bad-mcs-method-argument",
  "no-classmethod-decorator",
  "no-staticmethod-decorator",
  "bad-except-order",
  "duplicate-except",
  "return-in-finally",
  "lost-exception",
  "cyclic-import",
  "pointless-statement",
  "duplicate-key",
  "missing-parentheses-for-call-in-test",
  "redefined-outer-name",
]
disable = ["all"]

[tool.pylint.design]
max-parents = 7
max-attributes = 12

[tool.pylint.similarities]
min-similarity-lines = 10
ignore-imports = true
ignore-docstrings = true
ignore-comments = true
